--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This is a test -->
-<!-- This it Tobin's Test Again-->
+<!-- This it Tobin's Test-->
 <!-- This it Steph's test -->
 <html lang="en">
 
